--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 */
 img {
     width: 150px;
-    height: 150px;
+    height: auto;
 }
 
 body {
@@ -53,6 +53,7 @@ body {
       'footer footer ';
     grid-column-gap: 5%;
     grid-row-gap: 5%;
+    justify-items: stretch;
 }
 
 .item-1 {
@@ -84,4 +85,19 @@ body {
     grid-area: image;
     background: #ffe3fe;
     text-align: center;
+}
+
+.grid-container2 {
+    display: grid;
+    grid-template-columns: 50% 50%
+}
+
+.item-2-1{
+    grid-column: 1/3;
+}
+
+.item-2-6{
+    height: 30px;
+    width: 150px;
+    grid-column: 2/3;
 }
