--- a/style.css
+++ b/style.css
@@ -26,13 +26,23 @@
     grid-column - объединяет grid-column-start и grid-column-end
     grid-row - объединяет grid-row-start и grid-row-end
     grid-area +
-    justify-self
-    align-self
-    place-self
+    justify-self +
+    align-self + 
+    place-self +
 */
 img {
-    width: 150px;
+    width: auto;
     height: auto;
+}
+
+input {
+    width: 90%;
+    margin-top: 10px;
+}
+
+button {
+    margin-top: 30px;
+    width: 40%;
 }
 
 body {
@@ -43,29 +53,22 @@ body {
 .grid-container {
     display: grid;
     margin-top: 5px;
-    padding: 10px;
+    padding: 5%;
     grid-template-columns: 20% 75%;
-    grid-template-rows: auto 700px auto;
+    grid-template-rows: auto;
     grid-template-areas:
-      'header header '
-      'image main'
-      'image main '
-      'footer footer ';
-    grid-column-gap: 5%;
-    grid-row-gap: 5%;
-    justify-items: stretch;
+      'header header'
+      'main image'
+      'main image'
+      'footer footer';
+    grid-column-gap: 2.5%;
+    grid-row-gap: 2.5%;
 }
 
 .item-1 {
     grid-area: header;
     background: #440a67;
     text-align: center;
-    grid-auto-columns: 100%;
-    grid-auto-rows: auto;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
 }
 
 .item-2 {
@@ -75,29 +78,85 @@ body {
 }
 
 .item-3 {
-    grid-area: footer;
+    grid-area: image;
     background: #b4aee8;
-    text-align: right;
+    padding: 10%;
 }
 
 .item-4 {
+    grid-area: footer;
     color:black;
-    grid-area: image;
     background: #ffe3fe;
     text-align: center;
 }
 
-.grid-container2 {
+.grid-container-2 {
     display: grid;
-    grid-template-columns: 50% 50%
+    grid-template-columns: 32% 32% 32%;
+    grid-template-rows: repeat(5, 1fr);
+    grid-gap: 15px;
+    place-items: center stretch;
 }
 
-.item-2-1{
+.item-2-1 {
+    grid-row: 1;
+    grid-column: 1/4;
+    align-self: center;
+    justify-self: center;
+}
+
+.item-2-2 {
+    grid-row: 2;
     grid-column: 1/3;
+    align-self: stretch;
+    justify-self: stretch;
 }
 
-.item-2-6{
-    height: 30px;
-    width: 150px;
-    grid-column: 2/3;
+.item-2-3 {
+    grid-row: 2;
+    grid-column: 3;
+    align-self: stretch;
+    justify-self: stretch;
+}
+
+.item-2-4 {
+    grid-row: 3/6;
+    grid-column: 1;
+    align-self: stretch;
+    justify-self: stretch;
+}
+
+.item-2-5 {
+    grid-row: 3;
+    grid-column: 2;
+    align-self: stretch;
+    justify-self: stretch;
+}
+
+.item-2-6 {
+    grid-row: 3;
+    grid-column: 3;
+    align-self: stretch;
+    justify-self: stretch;
+}
+
+.item-2-7 {
+    grid-row: 4;
+    grid-column: 2/4;
+    align-self: stretch;
+    justify-self: stretch;
+}
+
+.item-2-8 {
+    grid-row: 5;
+    grid-column: 2/4;
+    align-self: stretch;
+    justify-self: stretch;
+}
+
+.item-2-9 {
+    grid-row: 6;
+    grid-column: 1/4;
+    align-self: stretch;
+    justify-self: stretch;
 }
